fix auth layout issue

--- a/src/app/layouts/auth-layout/pages/login/login.component.scss
+++ b/src/app/layouts/auth-layout/pages/login/login.component.scss
@@ -1,44 +1,5 @@
-.login-content {
-  .text-2 {
-    color: var(--heading-1st-color);
-    font-size: 16px;
-    line-height: 1.8;
-    a {
-      color: var(--primary-color);
-      transition: all 0.2s ease;
-      font-size: 16px;
-    }
-  }
-  .goggle-login {
-    padding: 5px 5px 5px 15px;
-    i {
-      color: var(--secondary-color);
-    }
-  }
-  .social-icons {
-    background-color: #6c757d;
-    border-radius: 5px;
-    i {
-      color: var(--secondary-color);
-    }
-    li {
-      width: 30px;
-      margin: 0px 6px 4px;
-      padding: 0;
-      overflow: visible;
-      text-align: center;
-    }
-  }
-  hr {
-    color: var(--body-font);
-    opacity: 0.25;
-  }
-  .form-dark {
-    label {
-      color: var(--heading-1st-color) !important;
-    }
-    .login-button {
-      padding: 0.8rem 2.6rem;
-    }
-  }
+:host {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
